--- a/index.html
+++ b/index.html
@@ -206,6 +206,64 @@ https://github.com/codeurzebs/my_portfolio
     </div>
   </section>
 
+  <section id="calculator" class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-5 col-md-12 col-12">
+          <div class="about-image svg">
+            <img src="images/money.png" class="img-fluid" alt="svg image">
+          </div>
+        </div>
+
+        <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
+          <div class="about-text">
+            <h2 class="animated animated-text">
+              <span class="mr-2">Mini Coin project with bootstrap<br> Enter the amount of your choice (CFA):</span>
+            </h2>
+            <input type="number" id="totalAmount" min="0" placeholder="0 CFA">
+            <div id="result" style="display: flex; justify-content: space-between; flex-wrap: wrap; margin-top: 20px;">
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="tenThousand">Nbers of (10.000 CFA) :</label>
+                <span id="tenThousand">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="fiveThousand">Nbers of (5.000 CFA) :</label>
+                <span id="fiveThousand">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="twoThousand">Nbers of (2.000 CFA) :</label>
+                <span id="twoThousand">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="oneThousand">Nbers of (1.000 CFA) :</label>
+                <span id="oneThousand">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="fiveHundred">Nbers of (500 CFA) :</label>
+                <span id="fiveHundred">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="oneHundred">Nbers of (100 CFA) :</label>
+                <span id="oneHundred">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="fifty">Nbers of (50 CFA) :</label>
+                <span id="fifty">0</span>
+              </div>
+              <div style="flex: 1 0 50%; box-sizing: border-box; padding: 10px; border: 1px solid black;">
+                <label for="twentyFive">Nbers of (25 CFA) :</label>
+                <span id="twentyFive">0</span>
+              </div>
+            </div>
+            <p>This project is directed and governed by Eng. Tanwi ICTU for mini school projects</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <!-- FEATURES -->
   <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
     <div class="container">
